# recommendation-system

./: Cargo.toml  Readme.md  data.json  diesel.toml
crates/basic-recommendation/: Cargo.toml
crates/basic-recommendation/src/: main.rs
crates/tmls-2020-recommender/: Cargo.toml
crates/tmls-2020-recommender/src/: lib.rs  main.rs  matrix_factor.rs  schema.rs  user_item_matrix.rs
crates/tmls-2020-recommender/src/prelude/: mod.rs  user_rating_matrix.rs
migrations/2025-01-04-163952_movie_and_ratings/: down.sql  up.sql
src/: main.rs
