[workspace]
resolver = "2"
members = ["crates/basic-recommendation", "crates/tmls-2020-recommender"]

[workspace.package]
rust-version = "1.80.0"
include = ["src/**/*.rs", "tests/**/*.rs", "LICENSE-*", "README.md"]
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
