[package]
name = "tmls-2020-recommender"
version = "0.1.0"
rust-version.workspace = true
include.workspace = true
edition.workspace = true

[dependencies]

tokio = { version = "1", features = ["full"] }
nalgebra = "*"
anyhow = { version = "*"}
ndarray-rand = "0.15.0"
rand = "0.8.5"
rayon = "1.10.0"
diesel = { version = "2.0.4", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
    "numeric",
    "64-column-tables",
    "serde_json",
] }

dotenvy = "*"